# cepgen

./: .arcconfig  .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  .zenodo.json  CHANGELOG  CITATION.cff  CMakeLists.txt  Doxyfile  Makefile  README  README.md  VERSIONS  cepgen-lhe.cpp  cepgen.spec.in  cpptoll.cpp  lpair.card  main.cpp  pptoll.card  release-notes.md  requirements.txt  source-lxplus.sh  test.cxx  upload-doc.sh
CepGen/: CMakeLists.txt  Generator.h  MCGen.h  Parameters.h  README  Version.h
CepGen/Cards/: BoostTreeHandler.cpp  CMakeLists.txt  CardsHandler.h  CommandLineHandler.cpp  ConfigHandler.cpp  ConfigHandler.h  ConfigReader.cpp  ConfigReader.h  FunctionBuilder.h  Handler.cpp  Handler.h  JsonHandler.cpp  LpairCards.cpp  LpairHandler.cpp  LpairHandler.h  LpairReader.cpp  LpairReader.h  PythonHandler.cpp  PythonHandler.h  PythonTypes.cpp  PythonUtils.cpp
CepGen/CollinearFluxes/: BudnevEPA.cpp  BudnevEPAHI.cpp  BudnevEPALepton.cpp  BudnevEPAProton.cpp  CollinearFlux.cpp  CollinearFlux.h  DreesZeppenfeldCollinearFlux.cpp  EPACollinearFlux.cpp  GammaIntegrated.cpp  KTIntegratedFlux.cpp  Parameterisation.cpp  Parameterisation.h
CepGen/Core/: CMakeLists.txt  EventExporter.cpp  EventExporter.h  EventHandler.cpp  EventHandler.h  EventModifier.cpp  EventModifier.h  EventModifierHandler.h  Exception.cpp  Exception.h  ExportHandler.h  ExportModule.cpp  ExportModule.h  ExportModuleHandler.h  FortranInterface.cpp  Functional.h  Generator.cpp  GeneratorWorker.cpp  GeneratorWorker.h  GenericExportHandler.cpp  GenericExportHandler.h  GenericHadroniser.cpp  GenericKTProcess.cpp  GenericKTProcess.h  GenericProcess.cpp  GenericProcess.h  GlobalFunctions.cpp  GlobalFunctions.h  GridHandler.h  GridParameters.cpp  GridParameters.h  HadronisersHandler.h  Hasher.h  Integrand.cpp  Integrator.cpp  Integrator.h  IntegratorCuba.cpp  IntegratorMISER.cpp  IntegratorPlain.cpp  IntegratorVegas.cpp  (+28 more)
CepGen/Event/: CMakeLists.txt  Event.cpp  Event.h  EventBrowser.cpp  EventBrowser.h  Momentum.cpp  Particle.cpp  Particle.h
CepGen/EventFilter/: EventBrowser.cpp  EventBrowser.h  EventExporter.cpp  EventExporter.h  EventHandler.cpp  EventHandler.h  EventHarvester.cpp  (+4 more)
CepGenAddOns/: CMakeLists.txt
CepGenProcesses/: CMakeLists.txt  GamGamLL.cpp  GamGamLL.h  LPAIR.cpp  LPAIR.h  PPtoFF.cpp  PPtoSusy.cpp  PPtoWW.cpp  ProcessesWrapper.cpp  nucl_to_ff.f
addons/: CMakeLists.txt
doc/: .gitignore  .htaccess  404.md  CMakeLists.txt  Doxyfile.in  allclasses.py  biblio.bib  bibliography.bib  cards-lpair.md  cards-lpair.rst  cards-python.md  cards-python.rst  changelog.md  changelog.rst  conf.in.py  conf.py  customdoxygen.css  event-modifiers.md  event.md  event.rst  hadronisers.rst  index.md  index.rst  install.md  install.rst  integrators.md  integrators.rst  output-formats.md  output-formats.rst  processes-devel.md  processes-devel.rst  processes-diffvm.md  processes-diffvm.rst  processes-lpair.md  processes-lpair.rst  processes-pptoff.md  processes-pptoff.rst  processes-pptoww.md  processes-pptoww.rst  py_filter  (+12 more)
docs/: .special.rst  404.rst  CMakeLists.txt  Doxyfile.in  bibliography.bib  cards-lpair.rst  cards-python.rst  conf.py  config-python.rst  customdoxygen.css  downloads.rst  event.rst  fullref.rst  index.rst  install-dev.rst  install.rst  output-formats.rst  processes-devel.rst  processes-lpair.rst  processes-pptoff.rst  processes-pptoww.rst  py_filter  python-containers.rst  strfun.rst  usage.rst
hadronisers/: CMakeLists.txt  GenericHadroniser.cpp  GenericHadroniser.h  Herwig6Hadroniser.cpp  Herwig6Hadroniser.h  Jetset7Hadroniser.cpp  Jetset7Hadroniser.h  Pythia6Hadroniser.cpp  Pythia6Hadroniser.h  Pythia8Hadroniser.cpp  Pythia8Hadroniser.h  hadronisers.h
processes/: CMakeLists.txt  GamGamLL.cpp  GamGamLL.h  GamGamWW.cpp  GamGamWW.h  GamPomVMLL.cpp  GamPomVMLL.h  GenericKTProcess.cpp  GenericKTProcess.h  GenericProcess.cpp  GenericProcess.h  PPtoLL.cpp  PPtoLL.h  PPtoWW.cpp  PPtoWW.h  TestProcess.cpp  TestProcess.h  gamgamll.cpp  gamgamll.h  gamgamww.cpp  gamgamww.h  gampomvmll.cpp  gampomvmll.h  pptoll.cpp  pptoll.h  processes.h  test.cpp  test.h
src/: CMakeLists.txt  EPA.cpp  Event.cpp  GenericHadroniser.cpp  GenericKTProcess.cpp  GenericProcess.cpp  Herwig6Hadroniser.cpp  Kinematics.cpp  Logger.cpp  MCGen.cpp  Parameters.cpp  Particle.cpp  Physics.cpp  Pythia6Hadroniser.cpp  Vegas.cpp  cepgen-cards-converter.cpp  cepgen-describe.cpp  cepgen-list-modules.cpp  cepgen-scan.cpp  cepgen.cc  cepgen.cpp  cepgenDescribeModules.cc  cepgenScan.cc  event.cpp  gamgam.cpp  gnuplot.cpp  hadroniser.cpp  herwig6hadroniser.cpp  inelastic.cpp  jetset7hadroniser.cpp  kinematics.cpp  lhe.cpp  lheutils.cpp  mcgen.cpp  parameters.cpp  particle.cpp  physics.cpp  process.cpp  pythia6hadroniser.cpp  utils.cpp  (+1 more)
test/: AbortHandler.h  ArgumentsParser.cpp  ArgumentsParser.h  CMakeLists.txt  Canvas.h  TestProcess.h  TreeEvent.h  TreeInfo.h  abort.h  cepgen-ascii.cpp  cepgen-event.cpp  cepgen-lhe.cpp  cepgen-list-modules.cpp  cepgen-root.cxx  cepgen.cpp  generate_events.cc  generate_root_output.cxx  probe_physics_processes.cpp  produce_distributions.cxx  scan_cross_section.cpp  steeringcard_parser.cc  test_alphas.cxx  test_collinearflux.cxx  test_cross_section_scan.cc  test_cross_section_scan.cpp  test_deriv.cc  test_distributions.cxx  test_event_writer.cc  test_event_writer.cpp  test_exceptions.cc  test_exceptions.cpp  test_f77_interface.f  test_fluxes.cc  test_formfact.cxx  test_function_parser.cc  test_function_parser.cpp  test_function_parser_rootcomp.cxx  test_integral.cc  test_integrator.cc  test_integrator.cpp  (+23 more)
utils/: CMakeLists.txt  Canvas.h  GenericCanvas.h  cepgenCardsConverter.cc  cepgenCmdTester.cc  cepgenDescribeModules.cc  cepgenDistributionDrawer.cc  cepgenEventConverter.cc  cepgenPlotAlphaEM.cc  cepgenPlotAlphaS.cc  cepgenPlotCollinearFluxes.cc  cepgenPlotFormFactors.cc  cepgenPlotFunction.cc  cepgenPlotKTFluxes.cc  cepgenPlotNachtmannAmplitudes.cc  cepgenPrintSteeringCard.cc  cepgenScanPhaseSpace.cc  combine.C  form_factors.cxx  inelasticparticle.cpp  probe.cpp  xsect.cpp
(+1592 files in other folders)
