add_subdirectory(APFELWrapper)
add_subdirectory(APFELppWrapper)
add_subdirectory(asciichartWrapper)
add_subdirectory(BasesWrapper)
add_subdirectory(BoostWrapper)
add_subdirectory(CLHEPWrapper)
add_subdirectory(CTMLWrapper)
add_subdirectory(CubaWrapper)
add_subdirectory(DelphesWrapper)
add_subdirectory(GnuplotWrapper)
add_subdirectory(HepMC2Wrapper)
add_subdirectory(HepMC3Wrapper)
add_subdirectory(Herwig6Wrapper)
add_subdirectory(LHAPDFWrapper)
add_subdirectory(MadGraphWrapper)
add_subdirectory(MatplotlibWrapper)
add_subdirectory(PhotosWrapper)
add_subdirectory(ProMCWrapper)
add_subdirectory(Pythia6Wrapper)
add_subdirectory(Pythia8Wrapper)
add_subdirectory(REvolverWrapper)
add_subdirectory(RivetWrapper)
add_subdirectory(ROOTWrapper)
add_subdirectory(SciplotWrapper)
add_subdirectory(TauolaWrapper)
add_subdirectory(TopdrawerWrapper)

add_subdirectory(Functionals)

#----- Python wrapper set to be the last to have everything else generated
add_subdirectory(PythonWrapper)

#----- propagate global variables to parent scope
set(CEPGEN_UNSTABLE_TESTS ${CEPGEN_UNSTABLE_TESTS} PARENT_SCOPE)
set(CEPGEN_EXTRA_LIBRARIES ${CEPGEN_EXTRA_LIBRARIES} PARENT_SCOPE)
