set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
set(exec_sources cepgen.cc)
if(CMAKE_BUILD_SCAN)
  list(APPEND exec_sources cepgenScan.cc)
endif()
message(STATUS "Executables will be linked against ${CEPGEN_LIBRARIES}")
foreach(exec_src ${exec_sources})
  get_filename_component(exec_bin ${exec_src} NAME_WE)
  add_executable(${exec_bin} ${exec_src})
  target_link_libraries(${exec_bin} ${CEPGEN_LIBRARIES})
  install(TARGETS ${exec_bin} DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT lib)
endforeach()

add_subdirectory(utils)
