set(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
file(GLOB exec_sources *.cc)
message(STATUS "Executables will be linked against ${CEPGEN_LIBRARIES}")
foreach(exec_src ${exec_sources})
  get_filename_component(exec_bin ${exec_src} NAME_WE)
  add_executable(${exec_bin} ${exec_src})
  target_link_libraries(${exec_bin} ${CEPGEN_LIBRARIES})
  install(TARGETS ${exec_bin} DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT lib)
endforeach()

add_subdirectory(utils)

add_test(NAME cepgen_list COMMAND cepgen -l)
set_property(TEST cepgen_list PROPERTY ENVIRONMENT "CEPGEN_PATH=${CEPGEN_PATH}")
add_test(NAME cepgen_lpair COMMAND cepgen -i Cards/lpair_cfg.py -n 5000)
set_property(TEST cepgen_lpair PROPERTY ENVIRONMENT "CEPGEN_PATH=${CEPGEN_PATH};PYTHONPATH=${CEPGEN_PATH}")
